# MultiMCwithROOT

./: .gitignore  CMakeLists.txt  main.cpp
